# revolucion-bancaria-programable-sim

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
calibration/: README.md  parameters.csv
configs/: thesis_pilot.json  thesis_smoke.json  thesis_v1.json
docs/: CALIBRATION.md  DECISIONS.md
runs_prov/S0/: index.json
runs_prov/S0/seed=10/world=A/run_id=7946a0b1f240293d/: config_used.json  event_log.csv  kpi_run.json  tx_log.csv
runs_prov/S0/seed=10/world=B/run_id=ee649ef179a7dad2/: config_used.json  event_log.csv  kpi_run.json  tx_log.csv
runs_prov/S0/seed=11/world=A/run_id=9a9692af2a9d85f1/: config_used.json  event_log.csv  kpi_run.json  tx_log.csv
runs_prov/S0/seed=11/world=B/run_id=74fb9d19117a643b/: config_used.json  event_log.csv  kpi_run.json  tx_log.csv
scripts/: aggregate_results.py  extract_pilot_bounds.py  make_results_pack.py  run_experiment.py  run_pilot.py  validate_config.py
src/revolucion_bancaria_programable_sim/: config.py  metrics.py  model_abm.py  model_de.py  rng.py
tests/: test_monotonicity.py  test_smoke.py
